# rag-mistral

./: README.md  load_modules.sh  pyproject.toml  run_streamlit.sh
app/: chatbot.py  llama.py  ragbot.py
db/: chroma.sqlite3
rag-mistral/: app.py  chroma.py  embeddings.py
